--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "alnmsg",
-  "version": "0.1.0",
-  "private": true,
+  "name": "hostinger-react",
+  "homepage": "http://anis-web.com/",
+  "version": "1.0.0",
+  "description": "my react application",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "joi": "^17.7.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
